# strange

./: CMakeLists.txt  README.md  continuation_passing.md  default.nix  flake.nix
docs/: continuation_passing.md
include/strange/: core.h  pipeline.h  strange.h
include/strange/adapters/: all.h  drop.h  enumerate.h  filter.h  take.h  transform.h  transform_invoke.h
include/strange/sinks/: all.h  file.h  print.h  swallow.h  to_vector.h
include/strange/sources/: all.h  each.h  file.h  range.h
test/: CMakeLists.txt  file.cpp  fizzbuzz.cpp  range.cpp
